--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
+# environment variables
 .env
+
+# folders and files that has been created automatically on the operative system
+__pycache__
 .DS_STORE
+
+# private databases information
+db_info.json
+db_rows.json
+simplified_rows.json
