I have created the base code to import the notion data, and extract what I need to post it on my google sheet. I have also created the google sheets API integration, the project on google cloud, 0Auth credentials, and the code to create and update the token which I need to access to my google sheet and POST the data. Last execution time's log: 8.73s

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,16 @@
-# environment variables
+# Environment variables
 .env
 
-# folders and files that has been created automatically on the operative system
-__pycache__
+# MacOS
 .DS_STORE
 
-# private databases information
+# Python
+__pycache__/
+
+# Google creds
+credentials.json
+token.json
+
+# Private databases information
 db_info.json
 db_rows.json
-simplified_rows.json
