I have updated the safe_get() function of the notion.py file to be more efficient and resolve some bugs. Also I have created the code for the add_headers_to_array() function to avoid code duplication. On another note, I have added the code to get 'gastos' notion database's data, and import it to the google sheets. Last execution time's log: 9.73s. I am still figuering out a way to get a specific amount of 'gastos' database's rows, as per a specific month-year.

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 
 # Python
 __pycache__/
+*.pyc
 
 # Google creds
 credentials.json
@@ -14,3 +15,5 @@ token.json
 # Private databases information
 db_info.json
 db_rows.json
+gastos.json
+categorias.json
